--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,27 @@
+*
+{
+    margin: 0px;
+    padding: 0px;
+}
+
+
 h2
 {
     color: red;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
+    text-decoration: overline;
+    font-size: 80px;
+    text-align: center;
+
+}
+
+#heading-parent
+{
+    background-color: rgb(128, 83, 16);
+    height: 600px;
+    padding: 100px 0px;
+    width: 1100px;
+    margin: 10px auto;
 }
