--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 
 h2
 {
-    color: red;
+    color: rgb(253, 192, 192);
     font-style: italic;
     font-weight: lighter;
     font-family: 'Times New Roman', Times, serif;
@@ -19,9 +19,34 @@ h2
 
 #heading-parent
 {
-    background-color: rgb(128, 83, 16);
+
+    /* background-image: linear-gradient(75deg,black,rgb(168, 15, 224)); */
+    background-image: linear-gradient(45deg, #b21515,transparent),url("../assets/pexels-fotios-photos-16129705.jpg");
     height: 600px;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 100px 0px;
-    width: 1100px;
+    max-width: 1100px;
     margin: 10px auto;
+    background-position:center;
+}
+
+.btn
+{
+    background-color: rgb(216, 27, 179);
+    padding: 8px 15px;
+    color: #fff;
+    border-style: solid;
+    border-width: 3px;
+    border-color: blueviolet;
+    border-radius: 4px;
+    
+}
+
+.btn-parent
+{
+text-align: center;
+
+
+
 }
