--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Oswald:wght@200..700&display=swap');
 *
 {
     margin: 0px;
@@ -10,7 +13,7 @@ h2
     color: rgb(253, 192, 192);
     font-style: italic;
     font-weight: lighter;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Oswald", sans-serif;
     text-decoration: overline;
     font-size: 80px;
     text-align: center;
@@ -25,6 +28,7 @@ h2
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
+    clip-path: polygon(8% 0, 100% 0, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
     padding: 100px 0px;
     max-width: 1100px;
     margin: 10px auto;
@@ -40,13 +44,11 @@ h2
     border-width: 3px;
     border-color: blueviolet;
     border-radius: 4px;
-    
+    font-family: "Oswald", sans-serif;
 }
 
 .btn-parent
 {
 text-align: center;
-
-
 
 }
