--- a/style/style.css
+++ b/style/style.css
@@ -1,54 +1,93 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap'); */
+/* <iframe src="https://giphy.com/embed/bGgsc5mWoryfgKBx1u" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="">via GIPHY</a></p> */
 
-@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Oswald:wght@200..700&display=swap');
 *
 {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+  padding: 0;
 }
+ h2{
 
-
-h2
-{
-    color: rgb(253, 192, 192);
-    font-style: italic;
-    font-weight: lighter;
-    font-family: "Oswald", sans-serif;
-    text-decoration: overline;
-    font-size: 80px;
-    text-align: center;
-
-}
-
+     color: rgb(97, 214, 244);
+     margin-left: 15px;
+     font-size: 50px;
+     font-weight: bolder;
+       text-decoration: overline;
+       text-align: left;
+ }
 #heading-parent
 {
+   /* background-image: linear-gradient(180deg, Coral,rgb(7, 81, 81)); */
+   
+   background-image: linear-gradient(45deg, rgb(110, 8, 8),transparent),url("../assets/IMG_8081.JPG");
+   background-size: cover;
+   background-position:center;
+   background-repeat: no-repeat;
+   height: 600px;
+   max-width: 1100px;
+   margin: 20px auto;
+   padding: 200px 0;
+   clip-path: polygon(50% 0%, 100% 0, 100% 36%, 92% 72%, 72% 88%, 41% 96%, 0 96%, 0 59%, 0 38%, 0 0);
 
-    /* background-image: linear-gradient(75deg,black,rgb(168, 15, 224)); */
-    background-image: linear-gradient(45deg, #b21515,transparent),url("../assets/pexels-fotios-photos-16129705.jpg");
-    height: 600px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    clip-path: polygon(8% 0, 100% 0, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-    padding: 100px 0px;
-    max-width: 1100px;
-    margin: 10px auto;
-    background-position:center;
+
 }
 
 .btn
 {
-    background-color: rgb(216, 27, 179);
+    color: rgb(156, 215, 235);
+    background-color: #ce1d1d;
     padding: 8px 15px;
-    color: #fff;
-    border-style: solid;
-    border-width: 3px;
-    border-color: blueviolet;
-    border-radius: 4px;
-    font-family: "Oswald", sans-serif;
+    font-size: 25px;
+    text-align:  center;
+    border-color: brown;
+    border-radius: 6px;
+    border-width: 7px;
+    margin-top: 5px;
 }
 
-.btn-parent
+#btn-parent
 {
-text-align: center;
+    text-align: left;
+    margin-left: 15px;
 
+}
+
+.btnn
+{
+    color: rgb(156, 215, 235);
+    background-color: #ce1d1d;
+    font-size: 25px;
+    padding: 10px 15px;
+    /* border-radius: 8px;
+    border-width: 3px; */
+    /* border-color: rgb(15, 11, 221); */
+    /* border-style: solid; */
+    text-align:  center;
+    border-color: brown;
+    border-radius: 6px;
+    border-width: 7px;
+    margin-top: 5px;
+
+}
+
+#btnn-parent
+{ text-align: left;
+    margin-left: 15px;
+}
+
+.btns
+{
+    color: rgb(156, 215, 235);
+    background-color: #ce1d1d;
+    font-size: 25px;
+    padding: 10px 15px;
+    border-color: brown;
+    border-width: 7px;
+    margin-top: 5px;
+    /* border-radius: 6px; */
+}
+
+#btns-parent
+{
+    text-align: left;
+    margin-left: 15px;
 }
